--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "scripts": {
     "dev": "vitepress dev docs",
     "build": "vitepress build docs",
-    "preview": "vitepress serve docs"
+    "preview": "vitepress preview docs"
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "vue": "^3.2.47"
   },
   "devDependencies": {
-    "@vue/compiler-sfc": "^3.0.0",
-    "vitepress": "^0.19.2"
+    "vitepress": "^1.0.0-alpha.75"
   }
 }
