--- a/package.json
+++ b/package.json
@@ -3,15 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "clean": "rimraf dist && rimraf docs/.vitepress/cache",
     "dev": "vitepress dev docs",
     "build": "vitepress build docs",
     "preview": "vitepress preview docs"
   },
-  "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^3.2.47"
-  },
   "devDependencies": {
-    "vitepress": "^1.0.0-rc.25"
+    "rimraf": "^6.0.1",
+    "vitepress": "^1.3.4"
   }
 }
